--- a/CQIntroductoryGIFFrameOperationHarness/Base.lproj/Main.storyboard
+++ b/CQIntroductoryGIFFrameOperationHarness/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9058" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9048"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CQIntroductoryGIFFrameOperationHarness" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,36 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UJ8-J9-gQP">
+                                <rect key="frame" x="37" y="20" width="526" height="526"/>
+                                <animations/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="muU-4a-QRY">
+                                <rect key="frame" x="272" y="554" width="57" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Animate"/>
+                                <connections>
+                                    <action selector="playAnimatedGif:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ehn-2V-sPS"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UJ8-J9-gQP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ym1-tQ-gdb"/>
+                            <constraint firstItem="UJ8-J9-gQP" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="d2P-3W-641"/>
+                            <constraint firstItem="muU-4a-QRY" firstAttribute="centerX" secondItem="UJ8-J9-gQP" secondAttribute="centerX" id="wGs-Qg-Bj8"/>
+                            <constraint firstItem="muU-4a-QRY" firstAttribute="top" secondItem="UJ8-J9-gQP" secondAttribute="bottom" constant="8" id="yYb-94-Nqo"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="UJ8-J9-gQP" id="Ppj-0T-oxy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="494" y="547"/>
         </scene>
     </scenes>
 </document>
